Surge issue update
Surge issue update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div>
-        Hello World from Umair after surge.
+        Hello World from Umair after surge issues.
     </div>    
 </body>
 </html>
