--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <title>First Example</title>
 </head>
 <body>
-    <div>
-        Now I catch the ISSUE I am facing.
-    </div>    
+    <h1>This is my First Heading</h1>
 </body>
 </html>
