--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>First Example</title>
+    <title>BootCamp2020</title>
 </head>
 <body>
-    <h1>This is my First Heading</h1>
+    <h1>1st Commit</h1>
 </body>
 </html>
